--- a/public/assets/frontend/about.html
+++ b/public/assets/frontend/about.html
@@ -12,10 +12,10 @@
     <title>Mag - Video &amp; Magazine HTML Template</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="{{('assets/frontend/img/core-img/favicon.ico')}}">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{('assets/frontend/style.css')}}">
 
 </head>
 
